Add basic form structure

--- a/index.html
+++ b/index.html
@@ -10,6 +10,42 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div id="hero-image">
+        <div id="logo"></div>
+    </div>
+    <div id="form-panel">
+        <header>
+            <p>Sacrifice your privacy with Y!</p>
+            <p>Forfeit your liberties:</p>
+        </header>
+        <form>
+            <div class="form-item">
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="fname" required>
+            </div>
+            <div class="form-item">
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lname" required>
+            </div>
+            <div class="form-item">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-item">
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" name="phone" required>
+            </div>
+            <div class="form-item">
+                <label for="pass">Password</label>
+                <input type="password" id="" name="" required>
+            </div>
+            <div class="form-item">
+                <label for="confirm-pass">Confirm Password</label>
+                <input type="password" id="" name="" required>
+            </div>
+            <button type="submit">Create Account</button>
+        </form>
+        <p>Already have an account? <span>Log in!</span></p>
+    </div>
 </body>
 </html>
